--- a/AndroidImg/app/src/main/res/layout/activity_info.xml
+++ b/AndroidImg/app/src/main/res/layout/activity_info.xml
@@ -26,14 +26,27 @@
 
     <ImageView
         android:id="@+id/PictureStar"
-        android:layout_width="77dp"
-        android:layout_height="81dp"
-        android:layout_marginTop="39dp"
+        android:layout_width="70dp"
+        android:layout_height="75dp"
+        android:layout_marginTop="40dp"
+        android:layout_marginEnd="150dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/txvInfo"
         app:layout_constraintVertical_bias="0.0"
         tools:srcCompat="@drawable/estrella" />
+
+    <ImageView
+        android:id="@+id/Favorite"
+        android:layout_width="70dp"
+        android:layout_height="75dp"
+        android:layout_marginStart="80dp"
+        android:layout_marginTop="40dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/PictureStar"
+        app:layout_constraintTop_toBottomOf="@+id/txvInfo"
+        app:layout_constraintVertical_bias="0.0"
+        tools:srcCompat="@drawable/corazon" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
